[package]
name = "mpt-get"
version = "0.1.0"
authors = ["HoshinoTented <limbolrain@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "3.0"
git2 = "0.13"
# reqwest = { version = "0.11", features = ["blocking"] }
hyper = { version = "0.14", features = ["full"] }
clap = "2.33"
lazy_static = "1.4"
regex = "1.4"
ansi_term = "0.6"
tokio = { version = "1.2", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0"
toml = "0.5"